# moltis

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  changelog.html  cloud-deploy.html  fly.toml  hooks.html  installation.html  justfile  local-validation.html  memory.html  print.html  render.yaml  run.sh  searchindex.js  security.html  shell.nix  streaming.html  system-prompt.html  toc.html  toc.js
.do/: deploy.template.yaml
.github/workflows/: ci.yml
crates/agents/: Cargo.toml
crates/agents/src/: model.rs  runner.rs
crates/agents/src/providers/: gemini.rs  gemini_oauth.rs  mod.rs  openai.rs
crates/agents/src/providers/local_gguf/: mod.rs  system_info.rs
crates/agents/src/providers/local_llm/: mod.rs  system_info.rs
crates/browser/src/: container.rs  detect.rs  lib.rs  manager.rs  pool.rs  types.rs
crates/channels/src/: plugin.rs
crates/cli/: Cargo.toml
crates/common/: Cargo.toml
crates/common/src/: hooks.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  loader.rs  schema.rs  template.rs  validate.rs
crates/discord/src/: handler.rs  outbound.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: broadcast.rs  channel.rs  channel_events.rs  chat.rs  lib.rs  local_llm_setup.rs  logs.rs  methods.rs  provider_setup.rs  push.rs  push_routes.rs  server.rs  services.rs  state.rs  tools_routes.rs  update_check.rs  whatsapp_routes.rs  ws.rs
crates/gateway/src/assets/: index.html  login.html  manifest.json  onboarding.html  style.css  sw.js
crates/gateway/src/assets/css/: components.css  layout.css
crates/gateway/src/assets/js/: app.js  gon.js  helpers.js  login-app.js  onboarding-view.js  page-agents.js  page-channels.js  page-chat.js  page-crons.js  page-images.js  page-onboarding.js  page-projects.js  page-settings.js  providers.js  push.js  sessions.js  theme-init.js  websocket.js
crates/gateway/tests/: auth_middleware.rs  boot_time.rs
crates/gateway/ui/: input.css  playwright.config.js
crates/gateway/ui/e2e/: start-gateway-onboarding.sh  start-gateway.sh
crates/gateway/ui/e2e/specs/: onboarding-auth.spec.js  smoke.spec.js
crates/media/src/: store.rs
crates/oauth/src/: defaults.rs
crates/onboarding/src/: service.rs
crates/sessions/src/: lib.rs  store.rs
crates/slack/src/: outbound.rs  socket.rs
crates/telegram/src/: plugin.rs
crates/tools/: Cargo.toml
crates/tools/src/: browser.rs  domain_approval.rs  lib.rs  location.rs  map.rs  network_proxy.rs  sandbox.rs  spawn_agent.rs
crates/wasm/: Cargo.toml  README.md
crates/wasm/src/: client.rs  config.rs  error.rs  lib.rs  storage.rs
crates/whatsapp/: Cargo.toml
crates/whatsapp-business/: Cargo.toml
crates/whatsapp-business/src/: access.rs  config.rs  outbound.rs  types.rs  webhook.rs
crates/whatsapp/src/: access.rs  config.rs  lib.rs  outbound.rs  plugin.rs  sidecar.rs  state.rs  types.rs  webhook.rs
crates/xmpp/src/: handlers.rs
docs/: channels.md  mobile-pwa.md
docs/src/: SUMMARY.md  agent-presets.md  gemini.md  local-llm.md  providers.md  session-tools.md  vision.md
scripts/: build-wasm.sh  local-validate-pr.sh  local-validate.sh
sidecar/whatsapp-baileys/: package.json
sidecar/whatsapp-baileys/src/: index.ts  types.ts
