[package]
edition.workspace = true
name              = "moltis-common"
version.workspace = true

[features]
default = ["native"]
# Native build with full tokio support
native = ["dep:tokio"]
# WASM build without tokio
wasm = []

[dependencies]
anyhow      = { workspace = true }
async-trait = "0.1"
futures     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
uuid        = { workspace = true }

# Optional: tokio is only available on native builds
tokio = { optional = true, workspace = true }

[lints]
workspace = true
