[package]
edition.workspace = true
name              = "moltis-whatsapp-business"
version.workspace = true

[dependencies]
anyhow          = { workspace = true }
async-trait     = "0.1"
axum            = { workspace = true }
hex             = { workspace = true }
hmac            = { workspace = true }
moltis-channels = { workspace = true }
moltis-common   = { workspace = true }
reqwest         = { workspace = true }
secrecy         = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
sha2            = { workspace = true }
tokio           = { workspace = true }
tokio-util      = { workspace = true }
tracing         = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
