[package]
edition.workspace = true
name              = "moltis-whatsapp"
version.workspace = true

[dependencies]
anyhow            = { workspace = true }
async-trait       = "0.1"
futures           = { workspace = true }
moltis-channels   = { workspace = true }
moltis-common     = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
tokio             = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing           = { workspace = true }
uuid              = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
